kubernetes/components/oauth2-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.7.1 # {"$imagepolicy": "default:oauth2-proxy"}
          args:
            - --http-address=0.0.0.0:4180
            - --github-user=$(ALLOWED_USERS)
            - --client-id=$(CLIENT_ID)
            - --client-secret=$(CLIENT_SECRET)
            - --cookie-secret=$(COOKIE_SECRET)
            - --provider=github
            - --redirect-url=https://$(SERVER_FQDN)/oauth2/callback
            - --cookie-domain=piny940.com
            - --cookie-secure=true
            - --whitelist-domain=*.piny940.com
            - --email-domain=*
          ports:
            - containerPort: 4180
          livenessProbe:
            httpGet:
              path: /ping
              port: 4180
            failureThreshold: 5
            initialDelaySeconds: 3
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ping
              port: 4180
            failureThreshold: 2
            successThreshold: 1
            initialDelaySeconds: 3
            periodSeconds: 20
