kubernetes/components/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    app: oauth2-proxy
  ports:
    - name: http
      protocol: TCP
      port: 4180
      targetPort: 4180
  type: ClusterIP
