kubernetes/components/oauth2-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - SERVER_FQDN_PLACEHOLDER
      secretName: cluster-tls
  rules:
    - host: SERVER_FQDN_PLACEHOLDER
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
